[package]
name = "rust-s3-cas-uploads"
version = "0.1.0"
authors = ["Linus Unnebäck <linus@folkdatorn.se>"]
edition = "2018"

[dependencies]
base64 = "0.12"
bytes = "0.5"
futures = "0.3"
md5 = "0.7"
rusoto_core = "0.43"
rusoto_s3 = "0.43"
sha2 = "0.8"
tempfile = "3"
tokio = { version = "0.2", features = ["blocking", "fs", "io-util", "macros"] }
tokio-util = { version = "0.2", features = ["codec"] }
warp = "0.2"
